# biosofttrade_test

src/: CMakeLists.txt  accessdeniedform.cpp  accessdeniedform.h  accessdeniedform.ui  accessgrantedform.cpp  accessgrantedform.h  accessgrantedform.ui  actionchooseform.cpp  actionchooseform.h  actionchooseform.ui  clockform.cpp  clockform.h  clockform.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  processingform.cpp  processingform.h  processingform.ui  qpostserver.cpp  qpostserver.h  toolchain_rpi2.cmake  toolchain_x86_64.cmake  widgets_test.pro
